--- a/contact.html
+++ b/contact.html
@@ -255,8 +255,7 @@ window.onload = startClippy;
     </div>
     <div class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
-    <p class="navbar-text pull-left">© 2020 - Theme Built By Tyler Butler, See it on
-        <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton" target="_blank" >GitHub</a>
+    <p class="navbar-text pull-left">© 2024 - Matthew Johnson
     </p>
     <p class="navbar-text pull-right">
             <!-- Displays Social Media Icons based on _config.yml settings -->
@@ -306,5 +305,6 @@ window.onload = startClippy;
     $('[data-toggle="popover"]').popover()
   })
 </script>
+
   </body>
 </html>
