--- a/index.html
+++ b/index.html
@@ -748,8 +748,7 @@ $('.show').show()
     <div class="dumbarton-spacer"></div>
     <div class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
-    <p class="navbar-text pull-left">© 2020 - Theme Built By Tyler Butler, See it on
-        <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton" target="_blank" >GitHub</a>
+    <p class="navbar-text pull-left">© 2024 - Matthew Johnson
     </p>
     <p class="navbar-text pull-right">
             <!-- Displays Social Media Icons based on _config.yml settings -->
@@ -799,5 +798,6 @@ $('.show').show()
     $('[data-toggle="popover"]').popover()
   })
 </script>
+
   </body>
 </html>
