--- a/publications.html
+++ b/publications.html
@@ -488,7 +488,7 @@
 
             </p>
             
-              <p class="card-text"><small class="text-muted">This page was last updated at 2023-12-23 09:45.</small></p>
+              <p class="card-text"><small class="text-muted">This page was last updated at 2023-12-23 09:51.</small></p>
             
           </div>
       </div>
@@ -496,8 +496,7 @@
     </div>
     <div class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
-    <p class="navbar-text pull-left">© 2020 - Theme Built By Tyler Butler, See it on
-        <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton" target="_blank" >GitHub</a>
+    <p class="navbar-text pull-left">© 2024 - Matthew Johnson
     </p>
     <p class="navbar-text pull-right">
             <!-- Displays Social Media Icons based on _config.yml settings -->
@@ -547,5 +546,6 @@
     $('[data-toggle="popover"]').popover()
   })
 </script>
+
   </body>
 </html>
