deploy: d2e357aa9b298e5bfa12ac1f4bf52dede6134260

--- a/index.html
+++ b/index.html
@@ -247,8 +247,10 @@
     <li class="media">
       <img src="/assets/img/icons/2x/princeton-crop.png" class="mr-3" alt="...">
       <div class="media-body">
-        <h5 style="font-family:Noto Sans JP;font-size:18px;color:;">Princeton</h5>
-        <p style="font-family:Noto Sans JP;font-size:15px;color:;"><i>School of Public and International Affairs</i></p>
+        <h5 style="font-family:Noto Sans JP;font-size:18px;color:;">Savannah College of Art and Design</h5>
+        <p style="font-family:Noto Sans JP;font-size:15px;color:;"><i>School of Film and Acting</i></p>
+        
+          <p>Acting</p>
         
       </div>
     </li>
