--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@
 
 <div class="card shadow">
   <div class="container">
-    <form name="contact" method="POST"  netlify>
+    <form name="contact" netlify>
       <div class="mb-3 mt-5">
         <input type="name" placeholder="Your Name" name="name" class="form-control" id="inputForName"/>
       </div>
