--- a/index.html
+++ b/index.html
@@ -686,7 +686,46 @@
       </div>
   </div>
 </div>
+<!-- HOME HIGHLIGHTS SECTION --> 
 
+<div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s glowing-border" style="max-width: 100%;">
+
+  <!-- ... (your existing card content) ... -->
+</div>
+
+<!-- Add the contact form here -->
+<div class="blogcard card-2 mb-4 mt-4" style="width: 100%;">
+  <div class="card-body">
+    <h1 class="card-title text-center" style="font-size:;font-weight:;">Contact Me</h1>
+    <p>Feel free to reach out to me using the form below:</p>
+  </div>
+</div>
+
+<div class="card shadow">
+  <div class="container">
+    <form name="contact" netlify>
+      <div class="mb-3 mt-5">
+        <input type="name" placeholder="Your Name" name="name" class="form-control" id="inputForName"/>
+      </div>
+      <div class="mb-3">
+        <textarea type="message" placeholder="Your Message" name="message" class="form-control" id="inputforMessage"></textarea>
+      </div>
+      <div class="mb-3">
+        <input type="email" placeholder="Your Email" name="email" class="form-control" id="inputforEmail">
+      </div>
+      <button type="submit" class="btn mb-4" style="background-color:;">Submit</button>
+    </form>
+  </div>
+</div>
+
+<script>
+function startClippy(){
+    new ClipboardJS('.btn');
+}
+window.onload = startClippy;
+</script>
+
+<!-- ... (your remaining scripts) ... -->
 
 
 <!-- ANIMATE.JS ANIMATE LIBRARY
