deploy: e641953d8c4235e1cfeb75bb336fe3e9632f7ce9

--- a/index.html
+++ b/index.html
@@ -699,8 +699,7 @@
     <h1 class="card-title text-center" style="font-size:;font-weight:;">Contact Me</h1>
     <p>
 Feel free to reach out to me through <a href="mailto:mattjohnvo@outlook.com"
-class="highlighted">E-Mail</a> , <a href="https://www.linkedin.com/in/mattjohnvo/" class="highlighted">Linkedin</a> , or <a href="https://twitter.com/mattjohnvo" class="highlighted">Twitter</a>.
-      You can also send me a message through the form below.
+class="highlighted">E-Mail</a> , <a href="https://www.linkedin.com/in/mattjohnvo/" class="highlighted">Linkedin</a> , or <a href="https://twitter.com/mattjohnvo" class="highlighted">Twitter</a>. You can also send me a message through the form below:
 </p>
   </div>
 </div>
