--- a/contact.html
+++ b/contact.html
@@ -220,12 +220,14 @@ window.onload = startClippy;
       </div>
       
     </div>
-    <div class="navbar navbar-default navbar-fixed-bottom">
+    <footer class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
-    <p class="navbar-text pull-left">© 2024 - Matthew Johnson
+    <p class="navbar-text pull-left">
+      <a href="/">Home</a> &copy; 2024 - Matthew Johnson
     </p>
     <p class="navbar-text pull-right">
-            <!-- Displays Social Media Icons based on _config.yml settings -->
+      <span class="sr-only">Follow us on social media:</span>
+      <!-- Displays Social Media Icons based on _config.yml settings -->
 
 <span style="color: Black;">
      
@@ -255,12 +257,14 @@ window.onload = startClippy;
 
     </p>
   </div>
-</div> 
+</footer>
 
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
   $(function () {
-    $('[data-toggle="popover"]').popover()
-  })
+    $('[data-toggle="popover"]').popover();
+  });
 </script>
 
   </body>
