deploy: 854bab9aeb15f64c10fc97af2a836ca4ec16135c

--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@ $('.show').show()
       <a href="/">Home</a> &copy; 2024 - Matthew Johnson
     </p>
     <p class="navbar-text pull-right">
-      <span class="sr-only">Follow us on social media:</span>
+      <span class="sr-only">Follow me on social media:</span>
       <!-- Displays Social Media Icons based on _config.yml settings -->
 
 <span style="color: Black;">
