--- a/404.html
+++ b/404.html
@@ -218,7 +218,7 @@
       <a href="/">Home</a> &copy; 2024 - Matthew Johnson
     </p>
     <p class="navbar-text pull-right">
-      <span class="sr-only">Follow us on social media:</span>
+      <span class="sr-only">Follow me on social media:</span>
       <!-- Displays Social Media Icons based on _config.yml settings -->
 
 <span style="color: Black;">
