--- a/pages/publications.html
+++ b/pages/publications.html
@@ -8,21 +8,34 @@ published: true
 ---
 {% assign theme = site.data.themes[site.ui_theme] %}
 
-<div class="image-list-container">
-  {% for image in site.static_files %}
-    {% if image.path contains 'assets/img/' and image.extname | downcase contains 'jpg' or image.extname | downcase contains 'jpeg' or image.extname | downcase contains 'png' or image.extname | downcase contains 'gif' %}
-      <div class="image-item">
-        <img src="{{ site.baseurl }}{{ image.path }}" alt="{{ image.name }}" class="img-fluid">
-        <div class="image-description">
-          <h5>{{ image.name | remove: '.jpg' | remove: '.jpeg' | remove: '.png' | remove: '.gif' }}</h5>
-          <p>Your image description here.</p>
+<div class="gear-section">
+  <h2 class="section-heading">Gear</h2>
+  <div class="image-list-container">
+    {% for image in site.static_files %}
+      {% if image.path contains 'assets/img/' and (image.extname | downcase contains 'jpg' or image.extname | downcase contains 'jpeg' or image.extname | downcase contains 'png' or image.extname | downcase contains 'gif') %}
+        <div class="image-item">
+          <img src="{{ site.baseurl }}{{ image.path }}" alt="{{ image.name }}" class="img-fluid">
+          <div class="image-description">
+            <h5>{{ image.name | remove: '.jpg' | remove: '.jpeg' | remove: '.png' | remove: '.gif' }}</h5>
+            <p>Your image description here.</p>
+          </div>
         </div>
-      </div>
-    {% endif %}
-  {% endfor %}
+      {% endif %}
+    {% endfor %}
+  </div>
 </div>
 
 <style>
+  .gear-section {
+    text-align: center;
+    margin-bottom: 20px; /* Adjust spacing between heading and images */
+  }
+
+  .section-heading {
+    font-size: 24px; /* Adjust the font size as needed */
+    font-weight: bold;
+  }
+
   .image-list-container {
     display: flex;
     flex-wrap: wrap;
