--- a/pages/publications.html
+++ b/pages/publications.html
@@ -6,11 +6,10 @@ header-img: null
 last-updated: '2020-10-30 5:55 PM'
 published: true
 ---
-
 {% assign theme = site.data.themes[site.ui_theme] %}
 <div class="blogcard  card-1 mb-4" style="width: 100%;">
   <div class="card-body">
-    <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">{{ page.title }}</h5>
+    <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }}; font-weight:{{ theme.post-font-weight }};">{{ page.title }}</h5>
+    <p>Hello, World!</p>
   </div>
 </div>
-{% bibliography -f papers %}
