--- a/index.html
+++ b/index.html
@@ -307,10 +307,25 @@
   
 <!-- ... (your remaining scripts) ... -->
 
+<!-- FLICKITY CAROUSEL LIBRARY -->
+<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://unpkg.com/flickity@2"></script>
 
-<!-- ANIMATE.JS ANIMATE LIBRARY
+<!-- ANIMATE.JS ANIMATE LIBRARY -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q==" crossorigin="anonymous"></script>
--->
+
+<!-- FLICKITY INITIALIZATION -->
+<script>
+  $(document).ready(function(){
+    $('.client-carousel').flickity({
+      cellAlign: 'left',
+      contain: true,
+      wrapAround: true,
+      autoPlay: 2000,
+    });
+  });
+</script>
 
 
 <!--JS FUNCTION FOR RECENT WORK SECTION -->
