deploy: 934e89a9d9d0d5809deca394ece4331679a83fbc

--- a/index.html
+++ b/index.html
@@ -189,7 +189,24 @@
 
     <div class="dumbarton-spacer-sm"></div>
     <div class="container">
-      
+      ---
+layout: default  # Example metadata, adjust according to your needs
+title: My Page
+carousels:
+  - images: 
+      - image: /uploads/slider/image1.jpg
+      - image: /uploads/slider/image2.jpg
+      - image: /uploads/slider/image3.jpg
+      - image: /uploads/slider/image4.jpg
+  - images: 
+      - image: /uploads/slider/image5.jpg
+      - image: /uploads/slider/image6.jpg
+      - image: /uploads/slider/image7.jpg
+      - image: /uploads/slider/image8.jpg
+---
+
+
+
 
 <!--  HELP TIPS SECTION  -->
 <!-- used only for develop mode, disable these in _config.yml with `help_tips: false` -->
