--- a/index.html
+++ b/index.html
@@ -208,8 +208,43 @@
       
       <div class="card-body animate__animated animate__fadeInRight" style="color:;">
       
-        <p style="color:;"><h5 id="hi-im-dumbarton-">Hi, I’m Dumbarton 👋</h5>
-<p>Dumbarton is a Jekyll Theme developed by <a href="https://github.com/tcbutler320">Tyler Butler</a>. The theme is designed for academics and features a simple home page with an about me section and an interactive highlights section to describe publications, coursework, courses taught, and projects. You can checkout the project on <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton">Github</a>, feel free to make contributions and feature requests and don’t forget to give it a star.</p>
+        <p style="color:;"><h1 id="matthew-johnson---voice-acting-portfolio">Matthew Johnson - Voice Acting Portfolio</h1>
+
+<p><strong>Status:</strong> Under Construction</p>
+
+<p>Hello. I’m Matt and I’m currently getting things together right now for a proper website to host my portfolio. Please don’t hesitate to contact me if you have any further questions!</p>
+<h2 id="demos">Demos</h2>
+
+<h3 id="commercial-demo">Commercial Demo</h3>
+<p><a href="#">Link to Commercial Demo</a></p>
+
+<h3 id="character-demo">Character Demo</h3>
+<p><a href="#">Link to Character Demo</a></p>
+
+<h2 id="recent-projects">Recent Projects</h2>
+
+<ol>
+  <li><strong>Project Title 1</strong>
+    <ul>
+      <li>Role: Character Name</li>
+      <li><a href="#">Link to Project</a></li>
+    </ul>
+  </li>
+  <li><strong>Project Title 2</strong>
+    <ul>
+      <li>Role: Character Name</li>
+      <li><a href="#">Link to Project</a></li>
+    </ul>
+  </li>
+</ol>
+
+<h2 id="contact-information">Contact Information</h2>
+
+<p>For inquiries and bookings, please contact Matthew Johnson at <a href="mailto:MattJohnVO@outlook.com">MattJohnVO@outlook.com</a> or [phone number].</p>
+
+<p>Follow Matthew on <a href="https://twitter.com/mattjohnvo">Twitter</a> for updates!</p>
+
+<p><em>Note: This portfolio is currently under construction. Stay tuned for more updates!</em></p>
 
 <p><a href="/contact.html" class="highlighted">Contact Me</a></p>
 <p>
