deploy: ae7801e6fa76042bf559a6ce20bd9a9486463ea4

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <h2 id="contact-information">Contact Information</h2>
 
-<p>For inquiries and bookings, please contact Matthew Johnson at <a href="mailto:MattJohnVO@outlook.com">MattJohnVO@outlook.com</a> or [phone number].</p>
+<p>For inquiries and bookings, please contact Matthew Johnson at <a href="mailto:MattJohnVO@outlook.com">MattJohnVO@outlook.com</a>.</p>
 
 <p>Follow Matthew on <a href="https://twitter.com/mattjohnvo">Twitter</a> for updates!</p>
 
