deploy: ab78282179bdc486155db890fa560283a4bb15d1

--- a/404.html
+++ b/404.html
@@ -88,7 +88,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Matthew Johnson, Actor with Professional Home Studio">
 <meta property="og:image" content="/assets/img/avatar/cropped.png">
-<meta property="og:image:alt" content="A minimalistic jekyll theme for academic">
+<meta property="og:image:alt" content="Matthew Johnson">
 <meta property="og:description" content="Actor with Professional Home Studio">
 <meta property="og:site_name" content="Matthew Johnson">
 <meta property="og:locale" content="en_US">
@@ -101,7 +101,7 @@
 <meta name="twitter:title" content="Actor with Professional Home Studio">
 <meta name="twitter:description" content="Actor with Professional Home Studio">
 <meta name="twitter:image" content="/assets/img/avatar/cropped.png">
-<meta name="twitter:image:alt" content="A minimalistic jekyll theme for academic">
+<meta name="twitter:image:alt" content="Matthew Johnson">
 
 <!-- Used for adding in-document CSS -->
 
