--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <meta property="og:description" content="Actor with Professional Home Studio">
 <meta property="og:site_name" content="Matthew Johnson">
 <meta property="og:locale" content="en_US">
-<meta property="article:author" content="Matthew Johnson">
+<meta property="article:author" content="">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@mattjohnvo">
