deploy: 1674e4c11e0b4a35b41238d31149bf238176aec4

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   to consistently ensure proper document rendering.
   Any other head element should come *after* these tags.
  -->
-<title>Matthew Johnson</title>
+<title></title>
 <!-- Set the base URL for all relative URLs within the document -->
 <base href="mattjohnvo.github.io">
 
@@ -86,13 +86,13 @@
 <meta property="fb:app_id" content="">
 <meta property="og:url" content="mattjohnvo.github.io">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Matthew Johnson, Actor with A Professional Home Studio">
+<meta property="og:title" content=", Actor with A Professional Home Studio">
 <meta property="og:image" content="/assets/img/avatar/cropped.png">
 <meta property="og:image:alt" content="Matthew Johnson">
 <meta property="og:description" content="Actor with A Professional Home Studio">
-<meta property="og:site_name" content="Matthew Johnson">
+<meta property="og:site_name" content="">
 <meta property="og:locale" content="en_US">
-<meta property="article:author" content="">
+<meta property="article:author" content="Matthew Johnson">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@mattjohnvo">
@@ -143,7 +143,7 @@
   <body style="background-color:;">
     
 <nav class="navbar navbar-expand-lg glowing-border mb-4" style="font-family:#FFB90F;background-color:#FFD700;">
-  <a class="navbar-brand" href="/index.html"><h4 style="font-family:Cabin;font-weight:600;color:#000000;">Matthew Johnson</h4></a>
+  <a class="navbar-brand" href="/index.html"><h4 style="font-family:Cabin;font-weight:600;color:#000000;"></h4></a>
   <button class="navbar-toggler text-#FFB90F" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <i class="fas fa-caret-down"></i>
   </button>
