--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
 <p>For inquiries and bookings, please contact Matthew Johnson at <a href="mailto:MattJohnVO@outlook.com">MattJohnVO@outlook.com</a>.</p>
 
-<p>Follow Matthew on <strong>[Twitter]</strong>(https://twitter.com/mattjohnvo) for updates!</p>
+<p>Follow Me on <strong>[Twitter]</strong> (https://twitter.com/mattjohnvo) for updates!</p>
 
 <p><em>Note: This portfolio is currently under construction. Stay tuned for more updates!</em></p>
 
