deploy: fb738724c5c8a52dbc633af21bf62bb7ae411507

--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 
 <!-- Short description of the document (limit to 150 characters) -->
 <!-- This content *may* be used as a part of search engine results. -->
-<meta name="description" content="Actor with A Professional Home Studio">
+<meta name="description" content="">
 
 <!-- Control the behavior of search engine crawling and indexing -->
 <meta name="robots" content="index,follow"><!-- All Search Engines -->
@@ -86,10 +86,10 @@
 <meta property="fb:app_id" content="">
 <meta property="og:url" content="mattjohnvo.github.io">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Matthew Johnson - Voice Acting Portfolio, Actor with A Professional Home Studio">
+<meta property="og:title" content="Matthew Johnson - Voice Acting Portfolio, ">
 <meta property="og:image" content="/assets/img/avatar/cropped.png">
 <meta property="og:image:alt" content="Matthew Johnson">
-<meta property="og:description" content="Actor with A Professional Home Studio">
+<meta property="og:description" content="">
 <meta property="og:site_name" content="Matthew Johnson - Voice Acting Portfolio">
 <meta property="og:locale" content="en_US">
 <meta property="article:author" content="Matthew Johnson">
@@ -98,8 +98,8 @@
 <meta name="twitter:site" content="@mattjohnvo">
 <meta name="twitter:creator" content="@mattjohnvo">
 <meta name="twitter:url" content="mattjohnvo.github.io">
-<meta name="twitter:title" content="Actor with A Professional Home Studio">
-<meta name="twitter:description" content="Actor with A Professional Home Studio">
+<meta name="twitter:title" content="">
+<meta name="twitter:description" content="">
 <meta name="twitter:image" content="/assets/img/avatar/cropped.png">
 <meta name="twitter:image:alt" content="Matthew Johnson">
 
