--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 <!-- Short description of the document (limit to 150 characters) -->
 <!-- This content *may* be used as a part of search engine results. -->
-<meta name="description" content="Actor with A Professional Home Studio">
+<meta name="description" content="">
 
 <!-- Control the behavior of search engine crawling and indexing -->
 <meta name="robots" content="index,follow"><!-- All Search Engines -->
