--- a/tags.html
+++ b/tags.html
@@ -20,7 +20,7 @@
 
 <!-- Short description of the document (limit to 150 characters) -->
 <!-- This content *may* be used as a part of search engine results. -->
-<meta name="description" content="">
+<meta name="description" content="Abundantly Present">
 
 <!-- Control the behavior of search engine crawling and indexing -->
 <meta name="robots" content="index,follow"><!-- All Search Engines -->
@@ -321,7 +321,7 @@
     <!-- /.container -->
             </p>
             
-              <p class="card-text"><small class="text-muted">This page was last updated at 2023-12-28 05:00.</small></p>
+              <p class="card-text"><small class="text-muted">This page was last updated at 2023-12-28 08:31.</small></p>
             
           </div>
       </div>
