deploy: 067144398663ba41a10a22bb462cc10ffce01f0e

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   to consistently ensure proper document rendering.
   Any other head element should come *after* these tags.
  -->
-<title>Matthew Johnson - Voice Acting Portfolio</title>
+<title>Matthew L. Johnson - Voice Acting Portfolio</title>
 <!-- Set the base URL for all relative URLs within the document -->
 <base href="mattjohnvo.github.io">
 
@@ -86,13 +86,13 @@
 <meta property="fb:app_id" content="">
 <meta property="og:url" content="mattjohnvo.github.io">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Matthew Johnson - Voice Acting Portfolio, Abundantly Present">
+<meta property="og:title" content="Matthew L. Johnson - Voice Acting Portfolio, Abundantly Present">
 <meta property="og:image" content="/assets/img/avatar/cropped.png">
-<meta property="og:image:alt" content="Matthew Johnson">
+<meta property="og:image:alt" content="Matthew L. Johnson">
 <meta property="og:description" content="Abundantly Present">
-<meta property="og:site_name" content="Matthew Johnson - Voice Acting Portfolio">
+<meta property="og:site_name" content="Matthew L. Johnson - Voice Acting Portfolio">
 <meta property="og:locale" content="en_US">
-<meta property="article:author" content="Matthew Johnson">
+<meta property="article:author" content="Matthew L. Johnson">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@mattjohnvo">
@@ -101,7 +101,7 @@
 <meta name="twitter:title" content="Abundantly Present">
 <meta name="twitter:description" content="Abundantly Present">
 <meta name="twitter:image" content="/assets/img/avatar/cropped.png">
-<meta name="twitter:image:alt" content="Matthew Johnson">
+<meta name="twitter:image:alt" content="Matthew L. Johnson">
 
 <!-- Used for adding in-document CSS -->
 
