--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   to consistently ensure proper document rendering.
   Any other head element should come *after* these tags.
  -->
-<title>Matthew Johnson - Voice Acting Portfolio</title>
+<title>Matthew L. Johnson - Voice Acting Portfolio</title>
 <!-- Set the base URL for all relative URLs within the document -->
 <base href="mattjohnvo.github.io">
 
