--- a/tags.html
+++ b/tags.html
@@ -8,7 +8,7 @@
   to consistently ensure proper document rendering.
   Any other head element should come *after* these tags.
  -->
-<title>Matthew Johnson - Voice Acting Portfolio</title>
+<title>Matthew L. Johnson - Voice Acting Portfolio</title>
 <!-- Set the base URL for all relative URLs within the document -->
 <base href="mattjohnvo.github.io">
 
@@ -321,7 +321,7 @@
     <!-- /.container -->
             </p>
             
-              <p class="card-text"><small class="text-muted">This page was last updated at 2023-12-28 08:31.</small></p>
+              <p class="card-text"><small class="text-muted">This page was last updated at 2023-12-30 12:04.</small></p>
             
           </div>
       </div>
