deploy: ebe709c23c78e717fcac8d06b120dcfa02eb057e

--- a/index.html
+++ b/index.html
@@ -178,7 +178,18 @@
 <p><a href="#">Link to Commercial Demo</a></p>
 
 <h3 id="character-demo">Character Demo</h3>
-<p><a href="#">Link to Character Demo</a></p>
+<hr />
+
+<p>layout: default
+title: Audio Embed
+—</p>
+
+<div class="audio-container">
+  <audio controls="">
+    <source src="/assets/audio/Matthew Johnson Character Demo.mp3" type="audio/mp3" />
+    Your browser does not support the audio tag.
+  </audio>
+</div>
 
 <h2 id="recent-projects">Recent Projects</h2>
 
