deploy: 601b321acd230875917d586bfa016689737e9c30

--- a/index.html
+++ b/index.html
@@ -174,14 +174,10 @@
 <p>Hello. I’m Matt and I’m currently getting things together right now for a proper website to host my portfolio. Please don’t hesitate to contact me if you have any further questions!</p>
 <h2 id="demos">Demos</h2>
 
-<h3 id="commercial-demo">Commercial Demo</h3>
-<p><a href="#">Link to Commercial Demo</a></p>
-
 <h3 id="character-demo">Character Demo</h3>
 <hr />
 
-<p>layout: default
-title: Audio Embed
+<p><a href="#">Download</a>
 —</p>
 
 <div class="audio-container">
@@ -191,6 +187,8 @@ title: Audio Embed
   </audio>
 </div>
 
+<h3 id="commercial-demo">Commercial Demo</h3>
+<p><a href="#">Link to Commercial Demo</a></p>
 <h2 id="recent-projects">Recent Projects</h2>
 
 <ol>
