deploy: 2fce53ef23fe48caf6e8f60f8899fdb62a7a59ad

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 <h3 id="character-demo">Character Demo</h3>
 <hr />
 
-<p><a href="#">Download</a>
+<p><a href="/assets/audio/Matthew_Johnson_Character_Demo.mp3">Download</a>
 —</p>
 
 <div class="audio-container">
