--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 —</p>
 
 <div class="audio-container">
+  <a class="download-button" href="/assets/audio/Matthew Johnson Character Demo.mp3" download="">Download Audio</a>
   <audio controls="">
     <source src="/assets/audio/Matthew Johnson Character Demo.mp3" type="audio/mp3" />
     Your browser does not support the audio tag.
