deploy: 7a58fc9ff7ff14321ae4486344ae574f652d4fd0

--- a/index.html
+++ b/index.html
@@ -171,17 +171,16 @@
 
 <p><strong>Status:</strong> Under Construction</p>
 
-<p>Hello, I’m Matt! I’m in the process of creating a dedicated website to showcase my voice acting portfolio. If you have any questions, feel free to reach out!</p>
-
+<p>Hello. I’m Matt and I’m currently getting things together right now for a proper website to host my portfolio. Please don’t hesitate to contact me if you have any further questions!</p>
 <h2 id="demos">Demos</h2>
+<hr />
 
 <h3 id="character-demo">Character Demo</h3>
-<hr />
 
 <hr />
 
 <div class="audio-container">
-  <a class="download-button" href="/assets/audio/Matthew Johnson Character Demo.mp3" download="">Download Character Demo</a>
+  <a class="download-button" href="/assets/audio/Matthew Johnson Character Demo.mp3" download="">Download Audio</a>
   <audio controls="">
     <source src="/assets/audio/Matthew Johnson Character Demo.mp3" type="audio/mp3" />
     Your browser does not support the audio tag.
@@ -189,8 +188,7 @@
 </div>
 
 <h3 id="commercial-demo">Commercial Demo</h3>
-<p><a href="#">Listen to Commercial Demo</a></p>
-
+<p><a href="#">Link to Commercial Demo</a></p>
 <h2 id="recent-projects">Recent Projects</h2>
 
 <ol>
@@ -212,12 +210,11 @@
 
 <p>For inquiries and bookings, please contact Matthew Johnson at <a href="mailto:MattJohnVO@outlook.com">MattJohnVO@outlook.com</a>.</p>
 
-<p>Follow me on <a href="https://twitter.com/mattjohnvo"><strong>Twitter</strong></a> for updates!</p>
+<p>Follow Me on <a href="https://twitter.com/mattjohnvo"><strong>Twitter</strong></a> for updates!</p>
 
 <p><em>Note: This portfolio is currently under construction. Stay tuned for more updates!</em></p>
 
-<p><a href="/contact.html">Contact Me</a> <!-- Consider making the "Contact Me" button more prominent --></p>
-
+<p><a href="/contact.html" class="highlighted">Contact Me</a></p>
 <p>
         
            
