deploy: 9f90e74abf91a57c75cef7f5d413671370afec30

--- a/index.html
+++ b/index.html
@@ -184,8 +184,11 @@
     <source src="/assets/audio/Matthew Johnson Character Demo.mp3" type="audio/mp3" />
     Your browser does not support the audio tag.
   </audio>
+</div>
+<div class="audio-container">
   <a class="download-button" href="/assets/audio/Matthew Johnson Character Demo.mp3" download="">Download Character Demo</a>
 </div>
+<hr />
 
 <h3 id="commercial-demo">Commercial Demo</h3>
 <p><a href="#">Link to Commercial Demo</a></p>
