--- a/index.html
+++ b/index.html
@@ -185,8 +185,9 @@
     Your browser does not support the audio tag.
   </audio>
 </div>
+
 <div class="audio-container">
-  <a class="download-button" href="/assets/audio/Matthew Johnson Character Demo.mp3" download="">Download Character Demo</a>
+  <a class="download-button highlighted" href="/assets/audio/Matthew Johnson Character Demo.mp3" download="">Download Character Demo</a>
 </div>
 
 <hr />
