--- a/index.html
+++ b/index.html
@@ -167,11 +167,13 @@
       
       <div class="card-body animate__animated animate__fadeInRight" style="color:;">
       
-        <p style="color:;"><h1 id="matthew-johnson---voice-acting-portfolio">Matthew Johnson - Voice Acting Portfolio</h1>
+        <p style="color:;"><div align="center">
+  <h1>Matthew Johnson - Voice Acting Portfolio</h1>
+  <strong>Status:</strong> Under Construction
 
-<p><strong>Status:</strong> Under Construction</p>
+  Hello. I'm Matt and I'm currently getting things together right now for a proper website to host my portfolio. Please don't hesitate to contact me if you have any further questions!
+</div>
 
-<p>Hello. I’m Matt and I’m currently getting things together right now for a proper website to host my portfolio. Please don’t hesitate to contact me if you have any further questions!</p>
 <h2 id="demos">Demos</h2>
 <hr />
 
