deploy: 346836bef510a8b94ba51448d1f035fece77a917

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
       <div class="card-body animate__animated animate__fadeInRight" style="color:;">
       
         <p style="color:;"><div align="center">
-  <h1>Matthew Johnson                 Voice Acting Portfolio</h1>
+  <h1>Matthew Johnson</h1>
+  <h1>Voice Acting Portfolio</h1>
   <strong>Status:</strong> Under Construction
 
   Hello. I'm Matt and I'm currently getting things together right now for a proper website to host my portfolio. Please don't hesitate to contact me if you have any further questions!
