deploy: 7837b63cec28001cd44b55e4f98504049c13125f

--- a/index.html
+++ b/index.html
@@ -199,22 +199,11 @@
 
 <hr />
 
-<h2 id="recent-projects">Recent Projects</h2>
+<h2 id="studio-information">Studio Information</h2>
 
-<ol>
-  <li><strong>Project Title 1</strong>
-    <ul>
-      <li>Role: Character Name</li>
-      <li><a href="#">Link to Project</a></li>
-    </ul>
-  </li>
-  <li><strong>Project Title 2</strong>
-    <ul>
-      <li>Role: Character Name</li>
-      <li><a href="#">Link to Project</a></li>
-    </ul>
-  </li>
-</ol>
+<div class="audio-container">
+  <a class="download-button highlighted" href="/assets/docs/StudioDetails.pdf" download="">Studio Details</a>
+</div>
 
 <h2 id="contact-information">Contact Information</h2>
 
