deploy: 0cdf7b9eb60bc9ae2d55618c32ac438428ed4b34

--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
 
 <hr />
 
-<h2 id="studio-information">Studio Information</h2>
+<h2 id="studio-details">Studio Details</h2>
 
-<div class="audio-container">
-  <a class="download-button highlighted" href="/assets/docs/StudioDetails.pdf" download="">Studio Details</a>
+<div class="button-container">
+  <a class="pdf-button highlighted" href="/assets/docs/StudioDetails.pdf" target="_blank">Studio Details</a>
 </div>
 
 <h2 id="contact-information">Contact Information</h2>
