deploy: 611ea0ce9173f77efc869d3bf497647a0fba9d42

--- a/index.html
+++ b/index.html
@@ -176,8 +176,11 @@
 
 <hr />
 
-<h3 id="character-demo">Character Demo</h3>
+<div style="text-align:center;">
 
+### Character Demo
+
+</div>
 <hr />
 
 <div class="audio-container">
