deploy: d06c910310ef4e7d243a72adca8b90b8c9e6d159

--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@
 
 <div style="text-align:center;">
 
-### Character Demo
+### **Character Demo**
 
 </div>
+
 <hr />
 
 <div class="audio-container">
