deploy: b4153dbef94fd8fb040c26f19a60e0ba1550ca41

--- a/index.html
+++ b/index.html
@@ -176,11 +176,7 @@
 
 <hr />
 
-<div style="text-align:center;">
-
-### **Character Demo**
-
-</div>
+<h3 id="character-demo">Character Demo</h3>
 
 <hr />
 
