deploy: 3893c0d685a03cdd9e7366c55189022d131224ad

--- a/index.html
+++ b/index.html
@@ -206,15 +206,19 @@
 
 <hr />
 
-<h2 id="contact-information">Contact Information</h2>
+<div style="text-align:center;">
+
+<h2>Contact Information</h2>
 
 <p>For inquiries and bookings, please contact Matthew Johnson at <a href="mailto:MattJohnVO@outlook.com">MattJohnVO@outlook.com</a>.</p>
 
-<p>Follow Me on <a href="https://twitter.com/mattjohnvo"><strong>Twitter</strong></a> for updates!</p>
+<p>Follow Me on <strong><a href="https://twitter.com/mattjohnvo">Twitter</a></strong> for updates!</p>
 
 <p><em>Note: This portfolio is currently under construction. Stay tuned for more updates!</em></p>
 
-<p><a href="/contact.html" class="highlighted">Contact Me</a></p>
+<a href="/contact.html" class="highlighted">Contact Me</a>
+
+</div>
 <p>
         
            
