deploy: 01b7fd2497a532eab9b90b542404c8a4f28c1743

--- a/index.html
+++ b/index.html
@@ -199,9 +199,13 @@
 
 <hr />
 
-<h3 id="commercial-demo">Commercial Demo</h3>
-<p><a href="#">Link to Commercial Demo</a></p>
+<div style="text-align:center;">
 
+<h2>Commercial Demo</h2>
+
+<a href="#" class="highlighted">Coming Soon</a>
+
+</div>
 <hr />
 
 <div style="text-align:center;">
