deploy: c931c816338dd29a47971410457ec0cfd1ed8ab8

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
 <h2>Commercial Demo</h2>
 
-<a href="#" class="highlighted">Coming Soon</a>
+&lt;a href="#" "&gt;Coming Soon&lt;/a&gt;
 
 </div>
 <hr />
