deploy: b332153c6af4e810fea8dcfb5a85bb3aee99849c

--- a/index.html
+++ b/index.html
@@ -203,12 +203,14 @@
 
 <h2>Commercial Demo</h2>
 
-&lt;a href="#" "&gt;Coming Soon&lt;/a&gt;
+<a>Coming Soon</a>
 
 </div>
 <hr />
 
 <div style="text-align:center;">
+
+<h2>Studio Details</h2>
 
 <div class="button-container">
   <a class="pdf-button highlighted" href="/assets/docs/StudioDetails.pdf" target="_blank">Studio Details</a>
