--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
 
 <h2>Studio Details</h2>
 
-<div class="button-container">
-  <a class="pdf-button highlighted" href="/assets/docs/StudioDetails.pdf" target="_blank">Studio Details</a>
+<div style="text-align:center;">
+
+<a class="pdf-button highlighted" href="/assets/docs/StudioDetails.pdf" target="_blank"><h2>Studio Details</h2></a>
+
 </div>
 
 </div>
