deploy: a0c5f539ddd856ef73f866a35119ef73e63a7751

--- a/index.html
+++ b/index.html
@@ -212,10 +212,8 @@
 
 <h2>Studio Details</h2>
 
-<div style="text-align:center;">
-
-<a class="pdf-button highlighted" href="/assets/docs/StudioDetails.pdf" target="_blank"><h2>Studio Details</h2></a>
-
+<div class="button-container">
+  <a class="pdf-button highlighted" href="/assets/docs/StudioDetails.pdf" target="_blank">Found Here</a>
 </div>
 
 </div>
