--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
 <h2>Contact Information</h2>
 
-<p>For inquiries and bookings, please contact Matthew Johnson at <a href="mailto:MattJohnVO@outlook.com">MattJohnVO@outlook.com</a>, or in the contact form below.</p>
+<p>For inquiries and bookings, please feel free to contact Matthew Johnson via email at <a href="mailto:MattJohnVO@outlook.com">MattJohnVO@outlook.com</a> or by using the contact form below.</p>
 
 <p>Follow Me on <strong><a href="https://twitter.com/mattjohnvo">Twitter</a></strong> for updates!</p>
 
