deploy: 3766247c95cc15b7526df2b11a16424a5046ae19

--- a/index.html
+++ b/index.html
@@ -226,9 +226,10 @@
 
 <p>For inquiries and bookings, please feel free to contact Matthew Johnson via email at <a href="mailto:MattJohnVO@outlook.com">MattJohnVO@outlook.com</a> or by using the contact form below.</p>
 
-<p>Follow Me on <strong><a href="https://twitter.com/mattjohnvo">Twitter</a></strong> for updates!</p>
 
-<p><em>Note: This portfolio is currently under construction. Stay tuned for more updates!</em></p>
+<p><em>Note: This portfolio is currently under construction.</em></p>
+
+<p>Follow Me on <strong><a href="https://twitter.com/mattjohnvo">Twitter</a></strong> for updates!</p>
 
 <a href="/contact.html" class="highlighted">Contact Me</a>
 
