deploy: ed7f002dd286c1ed631418e9e358d358468b99a0

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <h1>Matthew Johnson</h1>
   <h1>Voice Acting Portfolio</h1>
 
-  Hello. I'm Matt and I'm currently getting things together right now for a proper website to host my portfolio. Please don't hesitate to contact me if you have any further questions!
+  Abundantly Present
 </div>
 
 <hr />
