--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 <div style="text-align:center;">
 
-<h2>Studio Details</h2>
+<h2>Resume &amp; Studio Details</h2>
 
 <div class="button-container">
   <a class="pdf-button highlighted" href="/assets/docs/StudioDetails.pdf" target="_blank">Found Here</a>
